<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".PlayerSelectActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:elegantTextHeight="true"
        android:text="@string/personaliza_personaje"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/playerImage"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="16dp"
        android:contentDescription="Imagen presentación con animación y fondo con luz del color selccionado"
        android:maxWidth="50dp"
        android:maxHeight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="HardcodedText"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageSecondary1"
        android:layout_width="59dp"
        android:layout_height="59dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="20dp"
        android:contentDescription="Tercera opción"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerImage"
        tools:ignore="HardcodedText"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageSecondary2"
        android:layout_width="59dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:contentDescription="Segunda opción"
        app:layout_constraintEnd_toStartOf="@+id/imageSecondary3"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toEndOf="@+id/imageSecondary1"
        app:layout_constraintTop_toBottomOf="@+id/playerImage"
        tools:ignore="HardcodedText"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageSecondary3"
        android:layout_width="59dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="76dp"
        android:contentDescription="Primera opción"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerImage"
        tools:ignore="HardcodedText"
        tools:srcCompat="@tools:sample/avatars" />

    <RadioGroup
        android:id="@+id/genderGroup"
        android:layout_width="183dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageSecondary2">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hombre"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/mujer"
            android:textColor="@color/white" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/nameGroup"
        android:layout_width="260dp"
        android:layout_height="64dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderGroup">

        <TextView
            android:id="@+id/name"
            android:layout_width="91dp"
            android:layout_height="43dp"
            android:text="@string/nombreIn"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_in"
            android:layout_width="161dp"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameIn"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:hint="@string/nombreIn"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/colorSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/seleccionaColor"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameGroup" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/siguiente"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorGroup"
        app:layout_constraintVertical_bias="0.333" />

    <RadioGroup
        android:id="@+id/colorGroup"
        android:layout_width="137dp"
        android:layout_height="146dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorSelection">

        <RadioButton
            android:id="@+id/red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:width="1dp"
            android:text="@string/rojo"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/azul"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/yellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amarillo"
            android:textColor="@color/white" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>